# fitplan

./: .gitignore  Makefile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/adaptability/: __init__.py  orchestrator.py  triggers.py
backend/app/ai/baselines/: __init__.py  greedy.py
backend/app/ai/core/: __init__.py  constraints.py  explain.py  interfaces.py  models.py  registry.py  scheduling.py  scoring.py
backend/app/ai/csp/: __init__.py  backtracking.py  feasibility.py
backend/app/ai/ga/: __init__.py  genetic_algorithm.py
backend/app/ai/local/: __init__.py  hill_climbing.py  neighbourhood.py  simulated_annealing.py
backend/app/ai/search/: __init__.py  beam_search.py
backend/app/api/: plan_generate.py  plan_replan.py  plan_store.py
backend/tests/: conftest.py  test_beam_search.py  test_eval_scenarios.py  test_explain.py  test_feasibility.py  test_ga_generate.py  test_generate_plan.py  test_genetic_algorithm.py  test_greedy_baseline.py  test_health.py  test_hill_climbing.py  test_hill_climbing_registers.py  test_local_search_comparison.py  test_orchestrator.py  test_plan_replan.py  test_registry.py  test_scoring.py  test_simulated_annealing.py  test_triggers.py
backend/tests/fixtures/: sample_plans.json
docs/: eval_report.md  executive_summary.md  product-design.md
docs/contracts/: api.md  constraints.md  data-models.md
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml
(+19 files in other folders)
